# daily-standup

./: Makefile  pyproject.toml  setup.py
standup/: main.py
tests/: test_cli.py
