[tool.poetry]
name = "daily-standup"
version = "0.1.0"
description = ""
authors = ["jmh <jeff@jmh.dev>"]
readme = "README.md"
packages = [{include = "daily_standup"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
